; ModuleID = '/home/carl/AnghaBench/mongoose/examples/PIC32/mqtt_client/firmware/src/system_config/mx795_CC3100_e16/framework/driver/spi/static/src/extr_drv_spi_static_sys_queue.c_DRV_SPI_SYS_QUEUE_EnqueueLock.c'
source_filename = "/home/carl/AnghaBench/mongoose/examples/PIC32/mqtt_client/firmware/src/system_config/mx795_CC3100_e16/framework/driver/spi/static/src/extr_drv_spi_static_sys_queue.c_DRV_SPI_SYS_QUEUE_EnqueueLock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DRV_SPI_SYS_QUEUE_SUCCESS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @DRV_SPI_SYS_QUEUE_EnqueueLock(i32 %0, i8* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call i64 @_DRV_SPI_SYS_QUEUE_LockQueue(i32 %8, i32 0)
  store i64 %9, i64* %6, align 8
  %10 = load i64, i64* %6, align 8
  %11 = load i64, i64* @DRV_SPI_SYS_QUEUE_SUCCESS, align 8
  %12 = icmp ne i64 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %2
  %14 = load i64, i64* %6, align 8
  store i64 %14, i64* %3, align 8
  br label %28

15:                                               ; preds = %2
  %16 = load i32, i32* %4, align 4
  %17 = load i8*, i8** %5, align 8
  %18 = call i64 @DRV_SPI_SYS_QUEUE_Enqueue(i32 %16, i8* %17)
  store i64 %18, i64* %7, align 8
  %19 = load i32, i32* %4, align 4
  %20 = call i64 @_DRV_SPI_SYS_QUEUE_UnlockQueue(i32 %19, i32 0)
  store i64 %20, i64* %6, align 8
  %21 = load i64, i64* %6, align 8
  %22 = load i64, i64* @DRV_SPI_SYS_QUEUE_SUCCESS, align 8
  %23 = icmp ne i64 %21, %22
  br i1 %23, label %24, label %26

24:                                               ; preds = %15
  %25 = load i64, i64* %6, align 8
  store i64 %25, i64* %3, align 8
  br label %28

26:                                               ; preds = %15
  %27 = load i64, i64* %7, align 8
  store i64 %27, i64* %3, align 8
  br label %28

28:                                               ; preds = %26, %24, %13
  %29 = load i64, i64* %3, align 8
  ret i64 %29
}

declare dso_local i64 @_DRV_SPI_SYS_QUEUE_LockQueue(i32, i32) #1

declare dso_local i64 @DRV_SPI_SYS_QUEUE_Enqueue(i32, i8*) #1

declare dso_local i64 @_DRV_SPI_SYS_QUEUE_UnlockQueue(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
